--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="flex items-center justify-between py-3 px-2">
                 <!-- Logo -->
                 <a href="index.html" class="flex items-center space-x-3 group text-decoration-none">
-                    <img src="public/images/icons/logoMain.png" alt="" style="width: 180px;">
+                    <img src="public/images/icons/logoMain.png" alt="logo image" style="width: 180px;">
                 </a>
                 <!-- Desktop Navigation -->
                 <div class="hidden lg:flex items-center space-x-8 navlink">
@@ -217,7 +217,7 @@
                 <div class="mobile-brand py-5">
 
                     <span class="brand-text">
-                        <img src="public/images/icons/logoMain.png" alt="" style="width: 180px;">
+                        <img src="public/images/icons/logoMain.png" alt="related images" style="width: 180px;">
                     </span>
                     <!-- CLOSE BUTTON -->
                     <button class="mobile-close" id="mobileCloseBtn">✕</button>
@@ -615,8 +615,8 @@
                             <img src="public/images/shape/banner2.JPG" alt="campus images" class="rounded-lg shadow"
                                 data-aos="zoom-in">
                             <a class="video-play popup-video" href="https://www.youtube.com/watch?v=Uwq1uiuM_9w">
-                                <img src="public/images/shape/play-round.svg" class="round" alt="">
-                                <img src="public/images/shape/play-icon.svg" class="play-icon" alt="">
+                                <img src="public/images/shape/play-round.svg" class="round" alt="related images">
+                                <img src="public/images/shape/play-icon.svg" class="play-icon" alt="related images">
                             </a>
                         </div>
 
@@ -657,7 +657,7 @@
                         <div class="single-application-card style-3">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="icon">
-                                    <img src="public/images/icons/graduation-hat-and-diploma.png" alt="">
+                                    <img src="public/images/icons/graduation-hat-and-diploma.png" alt="related images">
                                 </div>
                                 <h1>01</h1>
                             </div>
@@ -672,7 +672,7 @@
                         <div class="single-application-card style-3">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="icon">
-                                    <img src="public/images/icons/receipt.png" alt="">
+                                    <img src="public/images/icons/receipt.png" alt="related images">
                                 </div>
                                 <h1>02</h1>
                             </div>
@@ -687,7 +687,7 @@
                         <div class="single-application-card style-3">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="icon">
-                                    <img src="public/images/icons/graduated.png" alt="">
+                                    <img src="public/images/icons/graduated.png" alt="related images">
                                 </div>
                                 <h1>03</h1>
                             </div>
@@ -702,7 +702,7 @@
                         <div class="single-application-card style-3">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="icon">
-                                    <img src="public/images/icons/graduation-hat-and-diploma.png" alt="">
+                                    <img src="public/images/icons/graduation-hat-and-diploma.png" alt="related images">
                                 </div>
                                 <h1>04</h1>
                             </div>
@@ -716,7 +716,7 @@
                         <div class="single-application-card style-3">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="icon">
-                                    <img src="public/images/icons/internship.png" alt="">
+                                    <img src="public/images/icons/internship.png" alt="related images">
                                 </div>
                                 <h1>05</h1>
                             </div>
@@ -731,7 +731,7 @@
                         <div class="single-application-card style-3">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="icon">
-                                    <img src="public/images/icons/networking.png" alt="">
+                                    <img src="public/images/icons/networking.png" alt="related images">
                                 </div>
                                 <h1>06</h1>
                             </div>
@@ -746,7 +746,7 @@
                         <div class="single-application-card style-3">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="icon">
-                                    <img src="public/images/icons/customer-satisfaction.png" alt="">
+                                    <img src="public/images/icons/customer-satisfaction.png" alt="related images">
                                 </div>
                                 <h1>07</h1>
                             </div>
@@ -762,7 +762,7 @@
                         <div class="single-application-card style-3">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="icon">
-                                    <img src="public/images/icons/scholarship.png" alt="">
+                                    <img src="public/images/icons/scholarship.png" alt="related images">
                                 </div>
                                 <h1>08</h1>
                             </div>
@@ -1231,34 +1231,34 @@
                 <h3 class="text-2xl font-headline font-bold color-blue text-center mb-8">Top Recruiters 2024</h3>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="public/images/recruiter/ICICIBank-removebg.png" alt="">
+                        <div class="swiper-slide"><img src="public/images/recruiter/ICICIBank-removebg.png" alt="related images">
                         </div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/capgemini-removebg.png" alt="">
+                        <div class="swiper-slide"><img src="public/images/recruiter/capgemini-removebg.png" alt="related images">
                         </div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/IIFL-removebg-preview.png" alt="">
+                        <div class="swiper-slide"><img src="public/images/recruiter/IIFL-removebg-preview.png" alt="related images">
                         </div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/ITC-removebg.png" alt=""></div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/Jindal-removebg.png" alt=""></div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/dell-removebg.png" alt=""></div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/cocacola.png" alt=""></div>
+                        <div class="swiper-slide"><img src="public/images/recruiter/ITC-removebg.png" alt="related images"></div>
+                        <div class="swiper-slide"><img src="public/images/recruiter/Jindal-removebg.png" alt="related images"></div>
+                        <div class="swiper-slide"><img src="public/images/recruiter/dell-removebg.png" alt="related images"></div>
+                        <div class="swiper-slide"><img src="public/images/recruiter/cocacola.png" alt="related images"></div>
                         <div class="swiper-slide"><img src="public/images/recruiter/KotakKotak-removebg-preview.png"
-                                alt=""></div>
+                                alt="related images"></div>
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="public/images/recruiter/ICICIBank-removebg.png" alt="">
+                        <div class="swiper-slide"><img src="public/images/recruiter/ICICIBank-removebg.png" alt="related images">
                         </div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/IIFL-removebg-preview.png" alt="">
+                        <div class="swiper-slide"><img src="public/images/recruiter/IIFL-removebg-preview.png" alt="related images">
                         </div>
-                        <!-- <div class="swiper-slide"><img src="/public/images/recruiter/IIFL.png" alt=""></div> -->
-                        <div class="swiper-slide"><img src="public/images/recruiter/ITC-removebg.png" alt=""></div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/Jindal-removebg.png" alt=""></div>
-                        <div class="swiper-slide"><img src="public/images/recruiter/Kellogs-removebg.png" alt=""></div>
+                        <!-- <div class="swiper-slide"><img src="/public/images/recruiter/IIFL.png" alt="related images"></div> -->
+                        <div class="swiper-slide"><img src="public/images/recruiter/ITC-removebg.png" alt="related images"></div>
+                        <div class="swiper-slide"><img src="public/images/recruiter/Jindal-removebg.png" alt="related images"></div>
+                        <div class="swiper-slide"><img src="public/images/recruiter/Kellogs-removebg.png" alt="related images"></div>
                         <div class="swiper-slide"><img src="public/images/recruiter/KotakKotak-removebg-preview.png"
-                                alt=""></div>
-                        <!-- <div class="swiper-slide"><img src="/public/images/recruiter/KotakKotak.png" alt=""></div> -->
+                                alt="related images"></div>
+                        <!-- <div class="swiper-slide"><img src="/public/images/recruiter/KotakKotak.png" alt="related images"></div> -->
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
@@ -1339,7 +1339,7 @@
                                 teachers. Their mentorship did not just impart knowledge; it sparked a passion for
                                 excellence, guiding me towards a future where possibilities are limitless and learning
                                 knows no bounds.</p>
-                            <!-- <img src="/public/images/shape/shape-2.png" alt=""  class="shape-decor" style="position: absolute; bottom: 0px; filter: invert(1);"> -->
+                            <!-- <img src="/public/images/shape/shape-2.png" alt="related images"  class="shape-decor" style="position: absolute; bottom: 0px; filter: invert(1);"> -->
 
                         </div>
                     </div>
@@ -1360,7 +1360,7 @@
                                 degree and extensive internship experience, I began my career at Agile Softech in 2015,
                                 refining my skills in development and learning. Currently, I work in the dynamic team at
                                 Tech2Edge as a full-stack developer.</p>
-                            <!-- <img src="/public/images/shape/shape-2.png" alt=""  class="shape-decor" style="position: absolute; bottom: 0px; filter: invert(1);"> -->
+                            <!-- <img src="/public/images/shape/shape-2.png" alt="related images"  class="shape-decor" style="position: absolute; bottom: 0px; filter: invert(1);"> -->
 
                         </div>
                     </div>
@@ -1532,12 +1532,12 @@
                 <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
                     <div class="icons">
                         <ul class="flex gap-2">
-                            <li><img src="public/images/icons/twitter.png" alt="" style="height: 28px;"></li>
-                            <li><img src="public/images/icons/linkedin.png" alt="" style="height: 28px;"></li>
-                            <li><img src="public/images/icons/instagram.png" alt="" style="height: 28px;"></li>
-                            <li><img src="public/images/icons/youtube.png  " alt="" style="height: 28px;"></li>
-                            <li><img src="public/images/icons/wordpress.png" alt="" style="height: 28px;"></li>
-                            <li><img src="public/images/icons/facebook.png" alt="" style="height: 28px;"></li>
+                            <li><img src="public/images/icons/twitter.png" alt="twitter socialIcons" style="height: 28px;"></li>
+                            <li><img src="public/images/icons/linkedin.png" alt="linkedin socialIcons" style="height: 28px;"></li>
+                            <li><img src="public/images/icons/instagram.png" alt="instagram socialIcons" style="height: 28px;"></li>
+                            <li><img src="public/images/icons/youtube.png  " alt="youtube socialIcons" style="height: 28px;"></li>
+                            <li><img src="public/images/icons/wordpress.png" alt="wordpress socialIcons" style="height: 28px;"></li>
+                            <li><img src="public/images/icons/facebook.png" alt="facebook socialIcons" style="height: 28px;"></li>
                         </ul>
 
                         <p class="text-white text-sm">© School of Management Sciences, Varanasi</p>
