some chnages on mobile

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                             <li><a href="admission.html">Director Speaks</a></li>
                             <li><a href="academic-area.html">The Journey</a></li>
                             <li class="mobile-dropdown">
-                                <div class="mobile-link mobile-toggle">
+                                <div class="mobile-link mobile-toggle submenu-toggle">
                                     Councils
                                     <span class="mobile-arrow"></span>
                                 </div>
@@ -308,7 +308,7 @@
                                 </ul>
                             </li>
                             <li class="mobile-dropdown">
-                                <div class="mobile-link mobile-toggle">
+                                <div class="mobile-link mobile-toggle submenu-toggle">
                                     Board of Studies
                                     <span class="mobile-arrow"></span>
                                 </div>
@@ -319,7 +319,7 @@
                                 </ul>
                             </li>
                             <li class="mobile-dropdown">
-                                <div class="mobile-link mobile-toggle">
+                                <div class="mobile-link mobile-toggle submenu-toggle">
                                     Staff
                                     <span class="mobile-arrow"></span>
                                 </div>
@@ -331,7 +331,7 @@
                                 </ul>
                             </li>
                             <li class="mobile-dropdown">
-                                <div class="mobile-link mobile-toggle">
+                                <div class="mobile-link mobile-toggle submenu-toggle">
                                     Infrastructure
                                     <span class="mobile-arrow"></span>
                                 </div>
@@ -381,7 +381,7 @@
                             <li><a href="scholarship.html">List Of Recruiters</a></li>
                             <li><a href="tution-fee.html">Current Year Placement</a></li>
                             <li class="mobile-dropdown">
-                                <div class="mobile-link mobile-toggle">
+                                <div class="mobile-link mobile-toggle submenu-toggle">
                                     E- Brochure
                                     <span class="mobile-arrow"></span>
                                 </div>
@@ -446,7 +446,7 @@
                             <li><a href="admission.html">Chapter Wise Alumni Meet</a></li>
                             <li class="mobile-dropdown">
 
-                                <div class="mobile-link mobile-toggle">
+                                <div class="mobile-link mobile-toggle submenu-toggle">
                                     Alumni Databas
                                     <span class="mobile-arrow"></span>
                                 </div>
@@ -624,7 +624,7 @@
 
 
     <!-- Important points Section -->
-    <section class="pt-5 pb-5 section-alt" id="virtualTour">
+    <section class="pt-2 pt-sm-5 pb-5 section-alt" id="virtualTour">
         <div class="container-custom">
 
             <!-- Campus Life Gallery -->
