--- a/index.html
+++ b/index.html
@@ -952,7 +952,6 @@
                         </div>
                     </div>
 
-
                     <div class="swiper-slide m-0">
                         <div class="text-center">
                             <img loading="lazy" src="public/images/awards/NIRF-National-Institutional.png"
@@ -981,10 +980,11 @@
 
                         </div>
                     </div>
-                    <div class="swiper-slide m-0">
+                     <div class="swiper-slide m-0">
                         <div class="text-center">
-                            <img loading="lazy" src="public/images/awards/NIRF-National-Institutional.png"
-                                alt="Excellence award badge" class=" mx-auto mb-4 awardsCards" style="height: 92px;">
+                            <img loading="lazy" src="public/images/awards/aicte_rectangle.png"
+                                alt="AICTE approved institution badge" class=" mx-auto mb-4 awardsCards"
+                                style="height: 92px;">
 
                         </div>
                     </div>
@@ -1018,13 +1018,7 @@
 
                         </div>
                     </div>
-                    <div class="swiper-slide m-0">
-                        <div class="text-center">
-                            <img loading="lazy" src="public/images/awards/NIRF-National-Institutional.png"
-                                alt="Excellence award badge" class=" mx-auto mb-4 awardsCards" style="height: 92px;">
-
-                        </div>
-                    </div>
+                   
                     <div class="swiper-slide m-0">
                         <div class="text-center">
                             <img loading="lazy" src="public/images/awards/rankedTop.png" alt="Excellence award badge"
@@ -1035,6 +1029,13 @@
                     <div class="swiper-slide m-0">
                         <div class="text-center">
                             <img loading="lazy" src="public/images/awards/Moodle_Banner2.png"
+                                alt="Excellence award badge" class=" mx-auto mb-4 awardsCards" style="height: 92px;">
+
+                        </div>
+                    </div>
+                     <div class="swiper-slide m-0">
+                        <div class="text-center">
+                            <img loading="lazy" src="public/images/awards/NIRF-National-Institutional.png"
                                 alt="Excellence award badge" class=" mx-auto mb-4 awardsCards" style="height: 92px;">
 
                         </div>
