--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                                 <li><a href="admission.html">Director Speaks</a></li>
                                 <li><a href="academic-area.html">The Journey</a></li>
                                 <!-- level 2 -->
-                                <li class="submenu-item has-child"><a href="javascript:void(0)">Councils</a>
+                                <li class="submenu-item has-child hoverarrow"><a href="javascript:void(0)">Councils</a>
                                     <ul class="submenu submenu--level2">
                                         <li><a href="academic.html">Governing Council</a></li>
                                         <li><a href="admission.html">Academic Council</a></li>
                                         <li><a href="academic-area.html">Corporate Advisory</a></li>
                                     </ul>
                                 </li>
-                                <li class="submenu-item has-child "><a href="javascript:void(0)">Board of
+                                <li class="submenu-item has-child hoverarrow"><a href="javascript:void(0)">Board of
                                         Studies</a>
                                     <ul class="submenu submenu--level2">
                                         <li><a href="academic.html">Management & Mass Comm Department</a></li>
@@ -120,7 +120,7 @@
                                         <li><a href="academic-area.html">Commerce Department</a></li>
                                     </ul>
                                 </li>
-                                <li class="submenu-item has-child "><a href="javascript:void(0)">Staff</a>
+                                <li class="submenu-item has-child hoverarrow"><a href="javascript:void(0)">Staff</a>
                                     <ul class="submenu submenu--level2">
                                         <li><a href="academic.html">Administrative</a></li>
                                         <li><a href="admission.html">Accounts</a></li>
@@ -128,7 +128,8 @@
                                         <li><a href="campus-life.html">Library</a></li>
                                     </ul>
                                 </li>
-                                <li class="submenu-item has-child "><a href="javascript:void(0)">Infrastructure</a>
+                                <li class="submenu-item has-child hoverarrow"><a
+                                        href="javascript:void(0)">Infrastructure</a>
                                     <ul class="submenu submenu--level2">
                                         <li><a href="academic.html">Architectural Philosophy</a></li>
                                         <li><a href="admission.html">Facilities@Campus</a></li>
@@ -145,7 +146,7 @@
                                 <li><a href="department-details.html">About Varanasi</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item has-child  "> <a href="programs.html"
+                        <li class="nav-item has-child  has-arrow"> <a href="programs.html"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">PROGRAMS</a>
                             <ul class="submenu sub__style">
                                 <li><a href="academic.html">MBA</a></li>
@@ -166,7 +167,8 @@
                                 <li><a href="campus-life.html">Placement Track Record</a></li>
                                 <li><a href="scholarship.html">List Of Recruiters</a></li>
                                 <li><a href="tution-fee.html">Current Year Placement</a></li>
-                                <li class="submenu-item has-child"><a href="javascript:void(0)">E-Brochure</a>
+                                <li class="submenu-item has-child hoverarrow"><a
+                                        href="javascript:void(0)">E-Brochure</a>
                                     <ul class="submenu submenu--level2">
                                         <li><a href="academic.html">Placement Brochure-PG</a></li>
                                         <li><a href="admission.html">Placement Brochure-UG</a></li>
@@ -180,9 +182,9 @@
                             <ul class="submenu sub__style">
                                 <li><a href="academic.html">Management and Commerce</a></li>
                                 <li><a href="admission.html">Computer Science</a></li>
-                                <li><a href="academic-area.html">Visiting Faculty International</a></li>
-                                <li><a href="campus-life.html">Visiting Faculty Academic</li>
+                                <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
                                 <li><a href="scholarship.html">Visiting Faculty Industrial</a></li>
+                                <li><a href="academic-area.html">Visiting Faculty International</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-child has-arrow "> <a href="aboutus.html"
@@ -202,12 +204,12 @@
                                 <li><a href="academic.html">Books & Souvenirs</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
+                        <li class="nav-item has-child has-arrow"><a href="javascript:void(0)"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">ALUMNI</a>
                             <ul class="submenu sub__style">
                                 <li><a href="academic.html">Alumni Association SMS</a></li>
                                 <li><a href="admission.html">Chapter Wise Alumni Meet</a></li>
-                                <li class="submenu-item has-child "><a href="javascript:void(0)">Alumni
+                                <li class="submenu-item has-child hoverarrow"><a href="javascript:void(0)">Alumni
                                         Database</a>
                                     <ul class="submenu submenu--level2">
                                         <li><a href="academic.html">PGDBM/PGDM</a></li>
@@ -980,7 +982,7 @@
 
                         </div>
                     </div>
-                     <div class="swiper-slide m-0">
+                    <div class="swiper-slide m-0">
                         <div class="text-center">
                             <img loading="lazy" src="public/images/awards/aicte_rectangle.png"
                                 alt="AICTE approved institution badge" class=" mx-auto mb-4 awardsCards"
@@ -1018,7 +1020,7 @@
 
                         </div>
                     </div>
-                   
+
                     <div class="swiper-slide m-0">
                         <div class="text-center">
                             <img loading="lazy" src="public/images/awards/rankedTop.png" alt="Excellence award badge"
@@ -1033,7 +1035,7 @@
 
                         </div>
                     </div>
-                     <div class="swiper-slide m-0">
+                    <div class="swiper-slide m-0">
                         <div class="text-center">
                             <img loading="lazy" src="public/images/awards/NIRF-National-Institutional.png"
                                 alt="Excellence award badge" class=" mx-auto mb-4 awardsCards" style="height: 92px;">
