--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
                                 </div>
 
                                 <ul class="mobile-submenu">
-                                    <li><a href="academic.html">Governing Council</a></li>
-                                    <li><a href="admission.html">Academic Council</a></li>
-                                    <li><a href="academic-area.html">Corporate Advisory</a></li>
+                                    <li class="mobilearrow"><a href="academic.html">Governing Council</a></li>
+                                    <li class="mobilearrow"><a href="admission.html">Academic Council</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">Corporate Advisory</a></li>
                                 </ul>
                             </li>
                             <li class="mobile-dropdown">
@@ -315,9 +315,9 @@
                                     <span class="mobile-arrow"></span>
                                 </div>
                                 <ul class="mobile-submenu">
-                                    <li><a href="academic.html">Management & Mass Comm Department</a></li>
-                                    <li><a href="admission.html">Computer Science Department</a></li>
-                                    <li><a href="academic-area.html">Commerce Department</a></li>
+                                    <li class="mobilearrow"><a href="academic.html">Management & Mass Comm Department</a></li>
+                                    <li class="mobilearrow"><a href="admission.html">Computer Science Department</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">Commerce Department</a></li>
                                 </ul>
                             </li>
                             <li class="mobile-dropdown">
@@ -326,10 +326,10 @@
                                     <span class="mobile-arrow"></span>
                                 </div>
                                 <ul class="mobile-submenu">
-                                    <li><a href="academic.html">Administrative</a></li>
-                                    <li><a href="admission.html">Accounts</a></li>
-                                    <li><a href="academic-area.html">Computer Centre</a></li>
-                                    <li><a href="academic-area.html">Library</a></li>
+                                    <li class="mobilearrow"><a href="academic.html">Administrative</a></li>
+                                    <li class="mobilearrow"><a href="admission.html">Accounts</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">Computer Centre</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">Library</a></li>
                                 </ul>
                             </li>
                             <li class="mobile-dropdown">
@@ -338,10 +338,10 @@
                                     <span class="mobile-arrow"></span>
                                 </div>
                                 <ul class="mobile-submenu">
-                                    <li><a href="academic.html">Administrative</a></li>
-                                    <li><a href="admission.html">Accounts</a></li>
-                                    <li><a href="academic-area.html">Computer Centre</a></li>
-                                    <li><a href="academic-area.html">Library</a></li>
+                                    <li class="mobilearrow"><a href="academic.html">Administrative</a></li>
+                                    <li class="mobilearrow"><a href="admission.html">Accounts</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">Computer Centre</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">Library</a></li>
                                 </ul>
                             </li>
                             <li><a href="alumni.html">Green Initiative</a></li>
@@ -388,9 +388,9 @@
                                     <span class="mobile-arrow"></span>
                                 </div>
                                 <ul class="mobile-submenu">
-                                    <li><a href="academic.html">Placement Brochure-PG</a></li>
-                                    <li><a href="admission.html">Placement Brochure-UG</a></li>
-                                    <li><a href="academic-area.html">Summer Training Brochure</a></li>
+                                    <li class="mobilearrow"><a href="academic.html">Placement Brochure-PG</a></li>
+                                    <li class="mobilearrow"><a href="admission.html">Placement Brochure-UG</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">Summer Training Brochure</a></li>
 
                                 </ul>
                             </li>
@@ -449,22 +449,22 @@
                             <li class="mobile-dropdown">
 
                                 <div class="mobile-link mobile-toggle submenu-toggle">
-                                    Alumni Databas
+                                    Alumni Database
                                     <span class="mobile-arrow"></span>
                                 </div>
                                 <ul class="mobile-submenu">
-                                    <li><a href="academic.html">PGDBM/PGDM</a></li>
-                                    <li><a href="admission.html">PGDM-IB</a></li>
-                                    <li><a href="academic-area.html">PGDM-RM</a></li>
-                                    <li><a href="academic-area.html">PGDM-IRM</a></li>
-                                    <li><a href="academic-area.html">MBA</a></li>
-                                    <li><a href="academic-area.html">MCA</a></li>
-                                    <li><a href="academic-area.html">M.COM</a></li>
-                                    <li><a href="academic-area.html">BBA</a></li>
-                                    <li><a href="academic-area.html">BCA</a></li>
-                                    <li><a href="academic-area.html">B.COM</a></li>
-                                    <li><a href="academic-area.html">B.COM(H)</a></li>
-                                    <li><a href="academic-area.html">BA(H) MASS COMM</a></li>
+                                    <li class="mobilearrow"><a href="academic.html">PGDBM/PGDM</a></li>
+                                    <li class="mobilearrow"><a href="admission.html">PGDM-IB</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">PGDM-RM</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">PGDM-IRM</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">MBA</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">MCA</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">M.COM</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">BBA</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">BCA</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">B.COM</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">B.COM(H)</a></li>
+                                    <li class="mobilearrow"><a href="academic-area.html">BA(H) MASS COMM</a></li>
 
                                 </ul>
 
